[settings] Add a standard settings handler
One that receives the filename to save the settings at, as well as a map
of default settings.

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(utils STATIC
   memory_size.cpp
   json_writer.cpp
   settings.cpp
+  settings_handler.cpp
   snap_utils.cpp
   standard_paths.cpp
   timer.cpp
