[CMake] Add -DMULTIPASS_COMPILER_* definitions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 string(TOLOWER "${CMAKE_BUILD_TYPE}" cmake_build_type_lower)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  add_definitions(-DMULTIPASS_COMPILER_CLANG)
+
   if(cmake_build_type_lower MATCHES "asan")
     add_compile_options(-fno-omit-frame-pointer -fsanitize=address)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
@@ -43,6 +45,12 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
   elseif(cmake_build_type_lower MATCHES "tsan")
     add_compile_options(-fno-omit-frame-pointer -fsanitize=thread)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fno-omit-frame-pointer -fsanitize=thread")
+  endif()
+else()
+  if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    add_definitions(-DMULTIPASS_COMPILER_GCC)
+  else()
+    add_definitions(-DMULTIPASS_COMPILER_MSVC)
   endif()
 endif()
 
