[settings] Move to own lib
Breaks build.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory(petname)
 add_subdirectory(platform)
 add_subdirectory(process)
 add_subdirectory(rpc)
+add_subdirectory(settings)
 add_subdirectory(simplestreams)
 add_subdirectory(ssh)
 add_subdirectory(sshfs_mount)
