--- a/src/client/gui/CMakeLists.txt
+++ b/src/client/gui/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright © 2019 Canonical Ltd.
+# Copyright © 2019-2021 Canonical Ltd.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 3 as
@@ -32,6 +32,7 @@ target_link_libraries(multipass_gui
   fmt
   formatter
   rpc
+  settings
   qhotkey
   Qt5::Core
   Qt5::Network
