[settings] Add a DynamicSettingSpec
One that receives, at construction, the function to interpret values.

--- a/src/settings/CMakeLists.txt
+++ b/src/settings/CMakeLists.txt
@@ -16,7 +16,8 @@
 add_library(settings STATIC
         basic_setting_spec.cpp
         persistent_settings_handler.cpp
-        settings.cpp)
+        settings.cpp
+        dynamic_setting_spec.cpp)
 
 target_link_libraries(settings
         fmt
