--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ add_executable(multipass_tests
   test_base_virtual_machine_factory.cpp
   test_basic_process.cpp
   test_cli_client.cpp
+  test_cli_prompters.cpp
   test_client_cert_store.cpp
   test_cloud_init_iso.cpp
   test_constants.cpp
